(fix): points input too wide

--- a/app/src/modules/wire/channel/channel.component.scss
+++ b/app/src/modules/wire/channel/channel.component.scss
@@ -121,7 +121,7 @@ m-wire-channel {
     letter-spacing: 1px;
 
     > input {
-      width: 100%;
+      width: 60%;
       padding: $minds-padding / 2;
       margin-left: $minds-margin * 1.5;
       font-family: inherit;
